--- a/weatherapp/src/app/home/home.component.html
+++ b/weatherapp/src/app/home/home.component.html
@@ -1,6 +1,9 @@
-<h1>World's best app</h1>
+<h1>App</h1>
 <div id="buttons">
   <a routerLink="/login" class="button">Login</a>
   <a routerLink="/register" class="button">Register</a>
   <a routerLink="/dashboard" class="button">Dashboard</a>
+
+  <iframe src='https://webchat.botframework.com/embed/4yearProject?s=0WaFHUQsezg._jqTQXu-CW57LY0yUZSdYNIm13Jy2bi0MJQdcRIxIc0'  
+        style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 </div>
