--- a/weatherapp/src/app/home/home.component.html
+++ b/weatherapp/src/app/home/home.component.html
@@ -4,6 +4,6 @@
   <a routerLink="/register" class="button">Register</a>
   <a routerLink="/dashboard" class="button">Dashboard</a>
 
-  <iframe src='https://webchat.botframework.com/embed/4yearProject?s=0WaFHUQsezg._jqTQXu-CW57LY0yUZSdYNIm13Jy2bi0MJQdcRIxIc0'  
-        style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+<iframe src='https://webchat.botframework.com/embed/4yearProjectBot?s=x6xA_jQogmQ.5uOQJ5-iYN1l1WqU99wvnyMsHGU2lEJjantGGJmEJug'  
+	style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 </div>
