--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,8 @@
 
 <button class="button" (click)="get_products()">GET /products</button>
 <button class="button" (click)="get_https()">GET /https</button>
- -->
-
+<h2>{{lat}} by {{lon}} </h2>
+-->
 		<div class="site-content">
 			<div class="site-header">
 				<div class="container">
@@ -37,7 +37,11 @@
 			<div class="hero">
 				<div class="container">
             <iframe src='https://webchat.botframework.com/embed/4yearProjectBot?s=x6xA_jQogmQ.5uOQJ5-iYN1l1WqU99wvnyMsHGU2lEJjantGGJmEJug'  
-            style='background: white; min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+						style='background: white; min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+						<div id="controls">
+							<input type="text" placeholder="{{city}}" id="myQuote">
+							<input type="submit" (click)="getAddress([lat],[lon] )" value="Get Location">
+						</div>
 				</div>
 			</div>
 		
