backend and registration

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,10 @@
 <button class="button" (click)="get_products()">GET /products</button>
 <button class="button" (click)="get_https()">GET /https</button>
 <h2>{{lat}} by {{lon}} </h2>
+<button class="button" (click)="postPorfile()">post profile</button>
 -->
+
+
 		<div class="site-content">
 			<div class="site-header">
 				<div class="container">
@@ -40,7 +43,7 @@
 						style='background: white; min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 						<div id="controls">
 							<input type="text" placeholder="{{city}}" id="myQuote">
-							<input type="submit" (click)="getAddress([lat],[lon] )" value="Get Location">
+							<input type="submit" (click)="getCity([lat],[lon] )" value="Get Location">
 						</div>
 				</div>
 			</div>
