--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -30,25 +30,39 @@
     
     <div class="hero">
       <div class="container">
-          <form (submit)="registerUser($event)">
-                <h2>Register Here</h2>
-              <div>
-                <input type="text" autocomplete="off" placeholder="Username" id="username">
-              </div>
-              <div>
-                <input type="password" autocomplete="off" placeholder="Password" id="password">
-              </div>
-              <div>
-                <input type="password" autocomplete="off" placeholder="Confirm Password" id="cpassword">
-              </div>
-              <div>
-                <input type="submit" value="Submit">
-              </div>
-            </form>
+          <h2>Register Here</h2>
+        <form name="form" (ngSubmit)="f.form.valid && registerUser($event)" #f="ngForm" novalidate>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" class="form-control" [(ngModel)]="model.email" #email="ngModel" [ngClass]="{'is-invalid':f.submitted && email.invalid}" name="email" required email />
+            <div *ngIf="f.submitted && email.invalid" class="invalid-feedback">
+              <div *ngIf="email.errors.required">Email Name is required</div>
+              <div *ngIf="email.errors.email">Email must be a valid email Address</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" [(ngModel)]="model.password" #password="ngModel" [ngClass]="{'is-invalid':f.submitted && password.invalid}" name="password" required minlength="6" />
+            <div *ngIf="f.submitted && password.invalid" class="invalid-feedback">
+              <div *ngIf="password.errors.required">Password Name is required</div>
+              <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="cpassword">Confirm Password</label>
+            <input type="password" class="form-control" [(ngModel)]="model.cpassword" #cpassword="ngModel" [ngClass]="{'is-invalid':f.submitted && cpassword.invalid}" name="cpassword" required minlength="6" />
+            <div *ngIf="f.submitted && cpassword.invalid" class="invalid-feedback">
+              <div *ngIf="cpassword.errors.required">Password Name is required</div>
+              <div *ngIf="cpassword.errors.minlength">Password must be at least 6 characters</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <input type="submit" value="Register">
+          </div>
+        </form>
       </div>
     </div>
-  
-    
+
     <footer class="site-footer">
       <div class="container">
         <p class="colophon">&copy; 2019 Tudor Voda. All rights reserved.</p>
