--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,7 +33,7 @@
           <form (submit)="loginUser($event)">
               <h2>Login Here</h2>
               <div>
-                <input type="text" autocomplete="off" placeholder="Username" id="username">
+                <input type="text" autocomplete="off" placeholder="Email" id="email">
               </div>
               <div>
                 <input type="password" autocomplete="off" placeholder="Password" id="password">
