Directline for bot

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,10 @@
 <!--
 
-<button class="button" (click)="get_products()">GET /products</button>
-<button class="button" (click)="get_https()">GET /https</button>
-<h2>{{lat}} by {{lon}} </h2>
-<button class="button" (click)="postPorfile()">post profile</button>
--->
 
+-->
+<button class="button" (click)="Authentication()">bot</button>
+<button class="button" (click)="sendActivity()">send</button>
+<button class="button" (click)="retrieveActivity()">retrive</button>
 
 		<div class="site-content">
 			<div class="site-header">
@@ -39,7 +38,7 @@
       
 			<div class="hero">
 				<div class="container">
-            <iframe src='https://webchat.botframework.com/embed/4yearProjectBot?s=x6xA_jQogmQ.5uOQJ5-iYN1l1WqU99wvnyMsHGU2lEJjantGGJmEJug'  
+         <iframe src='https://webchat.botframework.com/embed/4yearProjectBot?s=x6xA_jQogmQ.5uOQJ5-iYN1l1WqU99wvnyMsHGU2lEJjantGGJmEJug'  
 						style='background: white; min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 						<div id="controls">
 							<input type="text" placeholder="{{city}}" id="myQuote">
