--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -30,3 +30,132 @@ input[type=text], select, textarea {
       padding-top: 3%;
       padding-bottom: 2%;
   }
+
+  .chatContainer {
+    width: 400px;
+    height: 520px;
+    border: 2px solid #ddd;
+    background: white;
+    color: black;
+  }
+
+.chatContainer > .chatHeader {
+  padding: 5px;
+  border-bottom: 1px solid #ddd;
+}
+
+.chatContainer > .chatHeader > h2 {
+  color:black;
+}
+
+.chatContainer > .chatMessages{
+  height: 400px;
+  border-bottom: 1px solid #ddd;
+  overflow-y: scroll;
+  border: solid 1px #EEE;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+
+}
+
+
+.chatContainer > .chatBottom form input[type='submit']{
+  padding: 6px;
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
+
+.chatContainer > .chatBottom form input[type='text']{
+  width: 70%;
+  padding: 3px;
+  padding-left: 10px;
+  border: 1px solid ;
+  border-radius: 5px;
+  margin: 5px;
+  height: 30px;
+}
+
+.messages {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.message {
+  border-radius: 20px;
+  padding: 8px 15px;
+  margin-top: 1px;
+  margin-bottom: 5px;
+  display: inline-block;
+}
+
+.yours {
+  align-items: flex-start;
+}
+
+.yours .message {
+  margin-right: 25%;
+  background-color: #eee;
+  position: relative;
+}
+
+.yours .message.last:before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  bottom: 0;
+  left: -7px;
+  height: 20px;
+  width: 20px;
+  background: #eee;
+  border-bottom-right-radius: 15px;
+}
+.yours .message.last:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  left: -10px;
+  width: 10px;
+  height: 20px;
+  background: white;
+  border-bottom-right-radius: 10px;
+}
+
+.mine {
+  align-items: flex-end;
+}
+
+.mine .message {
+  color: white;
+  margin-left: 25%;
+  background: linear-gradient(to bottom, #00D0EA 0%, #0085D1 100%);
+  background-attachment: fixed;
+  position: relative;
+}
+
+.mine .message.last:before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  bottom: 0;
+  right: -8px;
+  height: 20px;
+  width: 20px;
+  background: linear-gradient(to bottom, #00D0EA 0%, #0085D1 100%);
+  background-attachment: fixed;
+  border-bottom-left-radius: 15px;
+}
+
+.mine .message.last:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  right: -10px;
+  width: 10px;
+  height: 20px;
+  background: white;
+  border-bottom-left-radius: 10px;
+}
