--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -27,13 +27,17 @@ input[type=text], select, textarea {
   }
   
   .hero{
-      padding-top: 3%;
-      padding-bottom: 2%;
+      padding-top: 5.5%;
+      padding-bottom: 5%;
+  }
+
+  .controls{
+    padding-top: 10%;
   }
 
   .chatContainer {
-    width: 400px;
-    height: 520px;
+    width: 100%;
+    height: 100%;
     border: 2px solid #ddd;
     background: white;
     color: black;
