--- a/src/styles.css
+++ b/src/styles.css
@@ -16,62 +16,21 @@ body {
    background: #1e202b; 
 }
  
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3{
    font-weight: 700;
    margin: 0 0 20px;
    line-height: normal; 
-}
-
-ul, ol {
-   margin: 0;
-   padding-left: 0; 
-}
- 
- a {
-   text-decoration: none;
-   color: #009ad8; 
-}
- 
- 
- p {
-   margin-top: 0; 
 }
  
 .container {
    margin-right: auto;
    margin-left: auto;
-   padding-left: 15px;
-   padding-right: 15px;
-}
-
-.container:after {
-     content: " ";
-     clear: both;
-     display: block;
-     overflow: hidden;
-     height: 0; 
-}
-
-@media (min-width: 768px) {
-     .container {
-       width: 750px; 
-    } 
-}
-
-@media (min-width: 992px) {
-     .container {
-       width: 970px; 
-    } 
-}
-
-@media (min-width: 1200px) {
-     .container {
-       width: 1170px; 
-    } 
+   padding-left: 2%;
+   padding-right: 2%;
 }
 
 .site-header {
-   padding: 50px 0; 
+   padding: 2%; 
 }
 
 .site-header .branding {
@@ -83,24 +42,13 @@ ul, ol {
        vertical-align: middle; 
 }
 
-.site-header .branding .logo {
-       margin-right: 10px; 
-}
-
 .site-header .branding .site-title {
-       margin-bottom: 5px;
-       font-size: 16px;
+       margin-bottom: 1%;
+       font-size: 1em;
        font-size: 1.1428571429em;
        color: white; 
 }
 
-.site-header .branding .site-description {
-       font-size: 10px;
-       font-size: 0.7142857143em;
-       display: block;
-       color: #bfc1c8; 
-}
- 
 .main-navigation {
     float: right; 
 }
@@ -111,10 +59,10 @@ ul, ol {
 
 .main-navigation .menu-toggle {
       background: none;
-      border: 2px solid transparent;
+      border: 1em solid transparent;
       color: white;
-      padding: 20px;
-      border-radius: 40px;
+      padding: 2em;
+      border-radius: 4em;
       -webkit-transition: .3s ease;
               transition: .3s ease;
       display: none;
@@ -146,7 +94,7 @@ ul, ol {
 
 .main-navigation .menu .menu-item {
         float: left;
-        margin-left: 10px; 
+        margin-left: 1em; 
 }
 
 .main-navigation .menu .menu-item a {
@@ -188,12 +136,6 @@ ul, ol {
        padding: 20px;
        display: block;
        color: white; 
-}
-
-.mobile-navigation .menu .menu-item {
-       border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
-       .mobile-navigation .menu .menu-item:last-child {
-         border-bottom: none; 
 }
 
 .mobile-navigation .menu .menu-item.current-menu-item a {
