--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -20,6 +20,7 @@ input[type=text], select, textarea {
     margin-top: 40px;
     margin-bottom: 35px;
     resize: vertical;
+    color:black;
 }
 
 input[type=submit] {
