--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,25 +9,16 @@ input[type=text], select, textarea {
     resize: vertical;
   }
 
-  input[type=submit] {
-      background-color: #4CAF50;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    
-  input[type=submit]:hover {
-      background-color: #45a049;
-    }
+ .btn-success{
+   margin-left: 2%;
+ }   
     
   h2{
       color: white;
   }
   
   .hero{
-      padding-top: 5.5%;
+      padding-top: 6%;
       padding-bottom: 5%;
   }
 
@@ -71,7 +62,7 @@ input[type=text], select, textarea {
 }
 
 .chatContainer > .chatBottom form input[type='text']{
-  width: 70%;
+  width: 50%;
   padding: 3px;
   padding-left: 10px;
   border: 1px solid ;
@@ -104,29 +95,6 @@ input[type=text], select, textarea {
   position: relative;
 }
 
-.yours .message.last:before {
-  content: "";
-  position: absolute;
-  z-index: 0;
-  bottom: 0;
-  left: -7px;
-  height: 20px;
-  width: 20px;
-  background: #eee;
-  border-bottom-right-radius: 15px;
-}
-.yours .message.last:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  bottom: 0;
-  left: -10px;
-  width: 10px;
-  height: 20px;
-  background: white;
-  border-bottom-right-radius: 10px;
-}
-
 .mine {
   align-items: flex-end;
 }
@@ -137,29 +105,4 @@ input[type=text], select, textarea {
   background: linear-gradient(to bottom, #00D0EA 0%, #0085D1 100%);
   background-attachment: fixed;
   position: relative;
-}
-
-.mine .message.last:before {
-  content: "";
-  position: absolute;
-  z-index: 0;
-  bottom: 0;
-  right: -8px;
-  height: 20px;
-  width: 20px;
-  background: linear-gradient(to bottom, #00D0EA 0%, #0085D1 100%);
-  background-attachment: fixed;
-  border-bottom-left-radius: 15px;
-}
-
-.mine .message.last:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  bottom: 0;
-  right: -10px;
-  width: 10px;
-  height: 20px;
-  background: white;
-  border-bottom-left-radius: 10px;
 }
