--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -7,6 +7,7 @@ input[type=text], select, textarea {
   margin-top: 6px;
   margin-bottom: 16px;
   resize: vertical;
+  color:black;
 }
 input[type=password], select, textarea {
     width: 100%;
@@ -17,6 +18,7 @@ input[type=password], select, textarea {
     margin-top: 6px;
     margin-bottom: 16px;
     resize: vertical;
+    color:black;
   }
 
 input[type=submit] {
@@ -38,5 +40,5 @@ h2{
 
 .hero{
     padding-top: 13%;
-    padding-bottom: 13%;
+    padding-bottom: 12%;
 }
